crates/schema/tests/compile_fail/derive_reserved_key_collision.stderr
error: field key `name` is reserved by `#[schema(reserved(..))]` and cannot be used — reserving a key prevents reusing it for a different field
 --> tests/compile_fail/derive_reserved_key_collision.rs:9:5
  |
9 |     name: String,
  |     ^^^^

error[E0599]: no associated function or constant named `schema` found for struct `Bad` in the current scope
  --> tests/compile_fail/derive_reserved_key_collision.rs:13:18
   |
 6 | struct Bad {
   | ---------- associated function or constant `schema` not found for this struct
...
13 |     let _ = Bad::schema();
   |                  ^^^^^^ associated function or constant not found in `Bad`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `schema`, perhaps you need to implement it:
           candidate #1: `HasSchema`
